Add debug log for initializeNotificationSource