@@ -419,9 +419,10 @@ public final class MemqConsumer<K, V> implements Closeable {
       storageProperties.setProperty(ConsumerConfigs.TOPIC_INTERNAL_PROP, topic);
       notificationSourceProps.setProperty(ConsumerConfig.GROUP_ID_CONFIG, groupId);
       notificationSourceProps.putAll(storageProperties);
-      logger.info("[TEST1] StraogeHandlerName: " + topicMetadata.getStorageHandlerName());
       storageHandler = StorageHandlerTable.getClass(topicMetadata.getStorageHandlerName())
-          .newInstance();
+              .getDeclaredConstructor().newInstance();
+      logger.info(String.format("[DEBUG6] StorageHandlerName: %s; StorageHandler: %s; StorageProperties: %s",
+              topicMetadata.getStorageHandlerName(), storageHandler.getClass(), storageProperties.keySet()));
       storageHandler.initReader(storageProperties, metricRegistry);
     }
     if (notificationSource == null) {
